fix: footer jumps on page reload

--- a/src/components/Section/section.scss
+++ b/src/components/Section/section.scss
@@ -126,6 +126,7 @@
     justify-self: center;
     max-width: 1234px;
     width: 100%;
+    min-height: 500px;
     margin: 0 auto;
     position: relative;
     z-index: 2;
